Added intern support and Supervisor Service