@@ -11,6 +11,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,27 +22,43 @@ public class SupervisorServiceImpl implements SupervisorService {
 
     @Override
     public List<SupervisorDto> getAllSupervisors() {
-        return supervisorRepository.findAll().stream().map(entity -> {
-            SupervisorDto dto = new SupervisorDto();
-            dto.setDepartmentName(entity.getDepartment().getName());
-            dto.setSupervisorName(entity.getName());
-            dto.setSupervisorEmail(entity.getEmail());
-            return dto;
-        }).toList();
+        return supervisorRepository.findAll().stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<SupervisorDto> findByInternId(Long internId) {
+        return supervisorRepository.findByInternId(internId).stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public void addSupervisor(CreateSupervisorRequest request) {
-        Supervisor supervisor = new Supervisor();
-        supervisor.setInternId(request.getInternId());
-        supervisor.setName(request.getSupervisorName());
-        supervisor.setEmail(request.getSupervisorEmail());
+        Supervisor sup = new Supervisor();
+        sup.setInternId(request.getInternId());
 
-        SupervisorDepartment department = departmentRepository.findById(request.getSupervisorDepartmentId())
-                .orElseThrow(() -> new RuntimeException("Departman bulunamadı"));
+        // department ataması
+        SupervisorDepartment dept = departmentRepository.findById(request.getSupervisorDepartmentId())
+                .orElseThrow(() -> new RuntimeException("Departman bulunamadı: " + request.getSupervisorDepartmentId()));
+        sup.setDepartment(dept);
 
-        supervisor.setDepartment(department);
+        sup.setName(request.getSupervisorName());
+        sup.setEmail(request.getSupervisorEmail());
 
-        supervisorRepository.save(supervisor);
+        supervisorRepository.save(sup);
+    }
+
+    // DTO dönüşümünü tek bir yerde topladık
+    private SupervisorDto toDto(Supervisor s) {
+        SupervisorDto dto = new SupervisorDto();
+        dto.setId(s.getId());
+        dto.setInternId(s.getInternId());
+        dto.setDepartmentId(s.getDepartment().getId());
+        dto.setDepartmentName(s.getDepartment().getName());
+        dto.setSupervisorName(s.getName());
+        dto.setSupervisorEmail(s.getEmail());
+        return dto;
     }
 }
